[gd_scene load_steps=23 format=2]

[ext_resource path="res://recursos/jogo/jogador/jogador.gd" type="Script" id=1]
[ext_resource path="res://elementos/imagem/pessoas/branco.png" type="Texture" id=2]
[ext_resource path="res://recursos/jogo/menu_de_habilidade/menu_de_habilidade.tscn" type="PackedScene" id=3]
[ext_resource path="res://elementos/fontes/roboto.tres" type="DynamicFont" id=4]
[ext_resource path="res://recursos/jogo/jogador/alavanca_de_toque/alavanca_de_toque.tscn" type="PackedScene" id=5]
[ext_resource path="res://elementos/audio/bob_andando.mp3" type="AudioStream" id=6]
[ext_resource path="res://recursos/jogo/texto_contador/texto_contador.tscn" type="PackedScene" id=7]
[ext_resource path="res://recursos/jogo/jogador/ContadorFPS.gd" type="Script" id=8]

[sub_resource type="CapsuleShape2D" id=2]
radius = 12.0
height = 0.0

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 0, 24, 24, 24 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 24, 24, 24, 24 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 48, 24, 24, 24 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 72, 24, 24, 24 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 96, 24, 24, 24 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 120, 24, 24, 24 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 144, 24, 24, 24 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 168, 24, 24, 24 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 2 )
region = Rect2( 24, 0, 24, 24 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "andar",
"speed": 10.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "correr",
"speed": 15.0
}, {
"frames": [ SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "parar",
"speed": 5.0
} ]

[sub_resource type="Theme" id=15]
default_font = ExtResource( 4 )

[sub_resource type="Theme" id=16]
default_font = ExtResource( 4 )

[node name="jogador" type="KinematicBody2D"]
position = Vector2( 360, 640 )
collision_layer = 2049
collision_mask = 4
script = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 0, -60 )
rotation = 0.174533
scale = Vector2( 1, 0.7 )
current = true

[node name="Colisao" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="alavanca_de_toque" parent="." instance=ExtResource( 5 )]
position = Vector2( 0, 342 )
scale = Vector2( 0.2, 0.2 )
z_index = 100
z_as_relative = false

[node name="BobAndando" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )

[node name="SpritesJogador" type="AnimatedSprite" parent="."]
position = Vector2( 0, -48 )
scale = Vector2( 4, 4 )
frames = SubResource( 13 )
animation = "parar"
playing = true

[node name="texto_contador" parent="." instance=ExtResource( 7 )]
position = Vector2( 0, -106 )

[node name="TempoRestante" type="ProgressBar" parent="."]
margin_left = -250.0
margin_top = -650.0
margin_right = 250.0
margin_bottom = -600.0
theme = SubResource( 15 )
percent_visible = false

[node name="menu_de_habilidade" parent="." instance=ExtResource( 3 )]
position = Vector2( -360, -695 )
loc_jogador = NodePath("..")

[node name="ContadorFPS" type="Label" parent="."]
margin_left = -337.0
margin_top = -670.0
margin_right = -245.0
margin_bottom = -574.0
rect_scale = Vector2( 1.5, 1.5 )
theme = SubResource( 16 )
text = "0"
script = ExtResource( 8 )

[connection signal="alavanca_movida" from="alavanca_de_toque" to="." method="_on_alavanca_de_toque_alavanca_movida"]
[connection signal="alavanca_solta" from="alavanca_de_toque" to="." method="_on_alavanca_de_toque_alavanca_solta"]
